# sc2tm

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/dia/: protocol.dia
include/client/: Client.h
include/common/: CLOpts.h  Game.h  buffer_operations.h  config.h  file_operations.h  packets.h  server_info.h  sha256.h
include/server/: Connection.h  GameGenerator.h  Server.h  ServerOpts.h
src/: CMakeLists.txt
src/client/: Client.cpp  main.cpp
src/common/: CLOpts.cpp  buffer_operations.cpp  file_operations.cpp  packets.cpp  sha256.cpp
src/server/: Connection.cpp  GameGenerator.cpp  Server.cpp  ServerOpts.cpp  main.cpp
